--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@angular/service-worker": "^15.2.8",
     "alertifyjs": "^1.13.1",
+    "angularx-qrcode": "^15.0.1",
     "bootstrap": "4.6",
+    "chart.js": "^4.3.0",
+    "firebase": "^9.22.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
